--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section class="header">
+    <header id="top">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <section>
             <ul>
@@ -24,7 +24,7 @@
                 </li>
             </ul>
         </section>
-    </section>
+    </header>
     <section class="hero"></section>
     <section class="content">
         <section class="search-engine-optimization">
