--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header id="top">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <section>
             <ul>
