--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </p>
         </section>
     </section>
-    <section class="benefits">
+    <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="lead-generation" />
@@ -82,7 +82,7 @@
                 need to advertise your page.
             </p>
         </section>
-    </section>
+    </aside>
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
