--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <section class="hero"></section>
-    <section class="content">
+    <article class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                 alt="search-engine-optimization" />
@@ -56,7 +56,7 @@
                 increase your lead generation.
             </p>
         </section>
-    </section>
+    </article>
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
