included user story, acceptance criteria, and table of contents in README file

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
             </ul>
         </nav>
     </header>
-    <section class="hero"></section>
-    <article class="content">
+    <section>
+        <img src="assets/images/digital-marketing-meeting.jpg" class="hero"
+        alt="digital-marketing-meeting"/>
+    </section>
+    <article>
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
                 alt="search-engine-optimization" />
