organized elements in body in HTML and corrected properties and attributes in CSS file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Horiseo</h1>
         <nav>
             <ul>
                 <li>
@@ -25,13 +25,10 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <article>
-            <img src="assets/images/digital-marketing-meeting.jpg" class="hero"
-        alt="digital-marketing-meeting"/>
-        </article>
+    <section class="hero"></section>
+    <main class="content">
         <article id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
+            <img src="./assets/images/search-engine-optimization.jpg"
                 alt="search-engine-optimization" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -41,7 +38,7 @@
             </p>
         </article>
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right"
+            <img src="./assets/images/online-reputation-management.jpg"
                 alt="online-reputation-management" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -51,7 +48,7 @@
             </p>
         </article>
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social-media-marketing" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -59,6 +56,7 @@
                 increase your lead generation.
             </p>
         </article>
+    </main>
         <aside class="benefits">
         <aside class="benefit-lead">
             <h3>Lead Generation</h3>
